# Fastly-Training-Demos

./: .gitignore  LICENSE  README.md
ERL-compute-rust/: Cargo.toml  fastly.toml
ERL-demos/: default_main_tf  erl_state-machine_tf  main.tf  static_file_exclusions_python-ua_tf  variables.tf
EncryptUserID/: Cargo.toml  README.md  encryptionkeys.json  fastly.toml
EncryptUserID/src/: main.rs
ImageUploadHasher/: README.md
NGWAF-Deployment-Examples/: README.md
NGWAF-Deployments-Options/: README.md
NGWAF-Edge-enrichment-with-restart-and-Compute/: README.md  inputs.auto.tfvars  ngwaf-deployment.tf  provider.tf  service-compute.tf  service-vcl.tf
NetScaler-Gateway-and-GSLB/: README.md
ObjectStorePlusSIEM/: main.tf  variables.tf
WebhookConsumer/: Cargo.toml  fastly.toml
ato-demo/: README.md
cache-api-simple/: README.md  fastly.toml
compute-slack-app/: Cargo.toml  README.md
core-cache-api-counter/: fastly.toml
csp-compute-rust/: Cargo.toml
dlp-with-openapi-spec/: README.md  fastly.toml  npm-shrinkwrap.json  package.json
dynamic-backend/: Cargo.toml  README.md
dynamic-backend/src/: main.rs  oauthworkflow.rs
dynamic-backend/src/oauthworkflow/: cookies.rs  jwt.rs  responses.rs
dynamic-backend/src/oauthworkflow/well-known/: jwks.json  openid-configuration.json
dynamic-backend/src/static/: domain_form.html
edge-terraform-starter/: README.md  compute-service.tf  inputs.auto.tfvars  main.tf  terraform.auto.tfvars  variables.tf
har-generator/: Cargo.toml  example_har.har  example_test_har.har  fastly.toml
hibp-passwords-api/: README.md  (+2 more)
(+182 files in other folders)
