[package]
name = "fastly-compute-project"
version = "0.1.0"
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "^0.9.2"
rust-crypto-wasm = "0.3.1"
rand = "0.8.5"
hex = "0.4.3"
serde = "1.0.160"
