[package]
name = "fastly-compute-project"
version = "0.1.0"
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "0.9.0"
serde = {version = "1.0.201", features = ["derive"]}

hmac-sha256 = "1.1.7"
rand = "0.8.5"
serde_json = "1.0.109"
base64 = "0.22.1"
toml = "0.5.9"
jwt-simple = "0.11.7"